--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
     "@hono/zod-openapi": "^1.1.3",
+    "@types/pg": "^8.15.5",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
+    "pg": "^8.16.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
