--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.0",
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.4.2",
@@ -17,12 +18,18 @@
     "@hono/zod-openapi": "^1.1.3",
     "@types/pg": "^8.15.5",
     "fastify": "^5.2.1",
+    "fastify-jwt": "^4.2.0",
+    "fastify-oauth2": "^4.6.0",
     "fastify-type-provider-zod": "^4.0.2",
     "pg": "^8.16.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@fastify/jwt": "5.0.0",
+    "@fastify/oauth2": "^8.1.2",
     "@types/node": "^22.13.9",
+    "@types/node-fetch": "^2.6.13",
+    "dotenv": "^17.2.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
